spelling error in json project data

--- a/src/projectData.json
+++ b/src/projectData.json
@@ -37,7 +37,7 @@
     "screenshot": "https://raw.githubusercontent.com/jmrao002/day-planner/main/assets/images/screenshot.png",
     "github": "https://github.com/jmrao002/day-planner",
     "deployment": "https://jmrao002.github.io/day-planner",
-    "description": "nter and save events for each hour of the day."
+    "description": "Enter and save events for each hour of the day."
   },
     {
       "id": 6,
